OJ-Backend/outputs/ed4d81f1-38af-4c07-80c6-a8ab49abfda3_error.txt
  File "K:\Mission Apple\Algo University\Project\Django\OnlineJudge\codes\ed4d81f1-38af-4c07-80c6-a8ab49abfda3.py", line 5
    print(2+3
         ^
SyntaxError: '(' was never closed
